# Mainframe-Studio

./: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  README.md
mainframe-services/: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.dev.md  README.md  cobol_verbs.txt  docker-compose.dev.yml  docker-compose.yaml  env.dev.example  env.example  init-mongo.js  pyproject.toml  requirements.txt
mainframe-services/app/: main.py  run_graph.py  test_chat_websocket.py  worker.py
mainframe-services/app/agents/: assistant.py  graph.py  tools.py
mainframe-services/app/api/: dependencies.py
mainframe-services/app/config/: constants.py  database.py  llm_client.py  nebula.py  rabbitmq.py  settings.py  websocket.py
mainframe-services/app/constants/: cobol.py  graph.py
mainframe-services/app/controllers/: assessment_controller.py  chat_controller.py  complexity_controller.py  dataset_assignment_controller.py  duplicate_file_controller.py  graph_controller.py  migration_controller.py  project_controller.py  repository_controller.py  reverse_controller.py  summarization_controller.py  user_controller.py  utility_controller.py
mainframe-services/app/decorators/: error_handling.py
mainframe-services/app/mock/: graph.json
mainframe-services/app/models/: assessment.py  chat.py  complexity.py  (+5 more)
mainframe-services/java_template/: README.md  docker-compose.yml  pom.xml
mainframe-workers/: .env.bak  .gitignore  Dockerfile  Dockerfile.pyrequire_airflow  Jenkinsfile  Makefile  README.md  docker-compose-airflow-dev.yaml  docker-compose-airflow.yaml  docker-compose.yaml  env.example  pyproject.toml  requirements.txt  test_bms_related_pgms.py  test_clist_parser.py  test_cobol_parser.py  test_cobol_parser_dnp.py  test_cobol_parser_isuzu.py  test_cobol_parser_mitsubishi.py  test_cobol_summarization.py  test_copybook_parser.py  test_copybook_parser_dnp.py  test_ogl_parser.py  test_panel_parser.py  test_wfl_parser_daikyo.ipynb  test_wfl_parser_daikyo.py
mainframe-workers/.ipynb_checkpoints/: test_wfl_parser_daikyo-checkpoint.ipynb
mainframe-workers/config/: airflow.cfg
mainframe-workers/dags/: reverse_repo_dag.py
mainframe-workers/grammar/: utils.py
mainframe-workers/src/: jcl_keywords.txt  main.py  worker.py
(+1141 files in other folders)
